[package]
name = "rnotes_cli"
version = "0.3.0"
authors = ["Alvaro Santos Andres <alvsanand@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
dirs = "2.0.2"
dotenv = "0.15"
hyper = { version = "0.10.13", default-features = false }
log = "0.4"
regex = "1.3"
rocket = "0.4"
rocket_contrib = "0.4"
rust-crypto = "0.2"
rustc-serialize = "0.3"
rustyline = "6.1"
rustyline-derive = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"

rnotes-core = { path = "../core" }

[dev_dependencies]