[package]
name = "rnotes_cli"
version = "0.3.0"
authors = ["Alvaro Santos Andres <alvsanand@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
dirs = "2.0.2"
dotenv = "0.15"
figlet-rs = "0.1"
hyper = "0.13.4"
log = "0.4"
regex = "1.3"
rust-crypto = "0.2"
rustc-serialize = "0.3"
rustyline = "6.1"
rustyline-derive = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8.1"
shell-words = "0.1"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }

rnotes-core = { path = "../core" }

[dev_dependencies]