[package]
name = "rnotes-core"
version = "0.1.0"
authors = ["Alvaro Santos Andres <alvsanand@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.33"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
log = "0.4"
r2d2 = "0.8"
regex = "1.3"
rocket = "0.4"
rustc-serialize = "0.3"

[dev_dependencies]